@@ -1,0 +1,4 @@
+PEERJS_KEY='peerjs'; // openssl rand -base64 18
+PEERJS_HOST='localhost';
+PEERJS_PORT=9000;
+PEERJS_PATH='/';
